[package]
name = "jenkins_metrics"
version = "0.3.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
cli_core = "0.1.0"
console = "0.6.1"
csv = "1.1.1"
docopt = "1.1"
humantime = "1.3.0"
log = "0.4.5"
prettytable-rs = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.32"
statistical = "1.0.0"
ordered-float = "2.0.0"